--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Peer Park | Peer-to-Peer Parking Network</title>
 </head>
 <body>
+    <h1>
+        Testing
+    </h1>
     
 </body>
 </html>
