--- a/index.html
+++ b/index.html
@@ -4,12 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://kit.fontawesome.com/04fe6a86d7.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="favicon.ico">
+
     <title>Peer Park | Peer-to-Peer Parking Network</title>
 </head>
 <body>
-    <h1>
-        Testing again
-    </h1>
-    
+    <div class="front">
+        <div class="navbar">
+            <nav>
+                <a href="#howtorent">How to Park</a>
+                <a href="#pricing">Pricing</a>
+                <a href="#team">About Us</a>
+            </nav>
+        </div>
+        <div class="header">
+            <h1>Not sure where to park?</h1>
+            <h2>No problem.</h2>
+            <a href="#" class="parking"><i class="fas fa-location-arrow"></i> Parking near you</a>
+        </div>
+    </div>
+    <div class="footer">
+        <footer>
+            &copy; 2021 Peer Park &nbsp; <i class="fa fa-instagram"></i> &nbsp; <i class="fa fa-twitter"></i> &nbsp; <i class="fa fa-facebook-square"></i>
+        </footer>
+    </div>
 </body>
 </html>
