Editing nav bar

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="#howtorent">How to Park</a>
                 <a href="#pricing">Pricing</a>
                 <a href="#team">About Us</a>
-                <a href="#product">Using the App</a>
+                <a href="#product">Our product</a>
             </nav>
         </div>
         <div class="header">
