--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav>
                 <a href="#howtorent">How to Park</a>
                 <a href="#product">Our product</a>
-                <a href="#pricing">Pricing</a>
+                <a href="price.html">Pricing</a>
                 <a href="#team">About Us</a>
             </nav>
         </div>
