--- a/price.html
+++ b/price.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Peer Park | Pricing</title>
+    <title>Peer Park | Peer-to-Peer Parking Network</title>
 </head>
 <body>
     <div class="front">
