Added logo to pages and the sections for the price page

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="front">
         <div class="navbar">
             <nav>
+                <img src="logo.png" alt="logo">
                 <a href="#howtorent">How to Park</a>
                 <a href="#product">Our product</a>
                 <a href="price.html">Pricing</a>
