--- a/price.html
+++ b/price.html
@@ -28,7 +28,7 @@
     <!--Renting fee section-->
     <div class="rentfee">
         <h2>Rent</h2>
-        <p>this is rent</p>
+        <p>The prices of the rent for parking are decided by the users that are uploading listing. Prices varies depending on the location, time and users discretion.</p>
     </div>
     
     <!--Service fee section-->
