added text for sections in price

--- a/price.html
+++ b/price.html
@@ -34,13 +34,24 @@
     <!--Service fee section-->
     <div class="servicefee">
         <h2>Service</h2>
-        <p>this is serv</p>
+        <p>For using our application, we will collect a service fee of 5%. This fee is deducted off the price of the listing.</p>
     </div>
     
     <!--Membership fee section-->
     <div class="membership">
         <h2>Membership</h2>
-        <p>this is member</p>
+        <p>Though using our application is free, we offer membership packs.</p>
+        <h3>Basic:</h3>
+        <ul>
+            <li>Price: x $</li>
+            <li>Description:</li>
+        </ul> 
+        
+        <h3>Premium:</h3>
+        <ul>
+            <li>Price: x $</li>
+            <li>Description:</li>
+        </ul> 
     </div>
 
 </body>
