added about page + linked all pages together

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <div class="navbar">
             <nav>
                 <img src="logo.png" alt="logo">
-                <a href="#howtorent">How to Park</a>
-                <a href="#product">Our product</a>
+                <a href="index.html">Home</a>
+                <a href="product.html">Our Product</a>
                 <a href="price.html">Pricing</a>
-                <a href="#team">About Us</a>
+                <a href="about.html">About Us</a>
             </nav>
         </div>
         <div class="header">
