--- a/about.html
+++ b/about.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
+
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Peer Park | Peer-to-Peer Parking Network</title>
 </head>
+
 <body>
-    <!--Nav Bar section (with links to different pages)-->
+    
+    <!--Navagation section-->
     <div class="front">
         <div class="navbar">
             <nav>
+                <img src="logo.png" alt="logo">
                 <a href="index.html">Home</a>
                 <a href="product.html">Our Product</a>
                 <a href="price.html">Pricing</a>
@@ -15,4 +19,4 @@
             </nav>
         </div>
     </div>
-</body>
+</body>    
