--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Peer Park | Peer-to-Peer Parking Network</title>
 </head>
 <body>
+     <!--Nav Bar section (with links to different pages)-->
     <div class="front">
         <div class="navbar">
             <nav>
@@ -21,12 +22,16 @@
                 <a href="about.html">About Us</a>
             </nav>
         </div>
+        
+         <!--Quick access-->
         <div class="header">
             <h1>Not sure where to park?</h1>
             <h2>No problem.</h2>
             <a href="#" class="parking"><i class="fas fa-location-arrow"></i> Parking near you</a>
         </div>
     </div>
+    
+     <!--Footer-->
     <div class="footer">
         <footer>
             &copy; 2021 Peer Park &nbsp; <i class="fa fa-instagram"></i> &nbsp; <i class="fa fa-twitter"></i> &nbsp; <i class="fa fa-facebook-square"></i>
