Fixing nav bar and footers

--- a/about.html
+++ b/about.html
@@ -3,6 +3,8 @@
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Peer Park | Peer-to-Peer Parking Network</title>
+    <script src="https://kit.fontawesome.com/04fe6a86d7.js" crossorigin="anonymous"></script>
+ 
 </head>
 
 <body>
@@ -11,12 +13,18 @@
     <div class="front">
         <div class="navbar">
             <nav>
-                <img src="logo.png" alt="logo">
+                <img src="images/logo.png" alt="logo">
                 <a href="index.html">Home</a>
                 <a href="product.html">Our Product</a>
                 <a href="price.html">Pricing</a>
                 <a href="about.html">About Us</a>
             </nav>
         </div>
+    </div>
+ <!--Footer-->
+    <div class="footer">
+        <footer>
+            &copy; 2021 Peer Park &nbsp; <i class="fa fa-instagram"></i> &nbsp; <i class="fa fa-twitter"></i> &nbsp; <i class="fa fa-facebook-square"></i>
+        </footer>
     </div>
 </body>    
