--- a/price.html
+++ b/price.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Peer Park | Peer-to-Peer Parking Network</title>
+    <script src="https://kit.fontawesome.com/04fe6a86d7.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -11,7 +12,7 @@
     <div class="front">
         <div class="navbar">
             <nav>
-                <img src="logo.png" alt="logo">
+                <img src="images/logo.png" alt="logo">
                 <a href="index.html">Home</a>
                 <a href="product.html">Our Product</a>
                 <a href="price.html">Pricing</a>
@@ -52,5 +53,10 @@
             <dd>Price: x $/month</dd>
             <dd>Description:Purchasing this pack gives you the same advantage as the <i>Basic</i> membership with the added advantege of having your listings at the top of the reasults when your general area is searched.</dd>
         </dl>
-
+ <!--Footer-->
+    <div class="footer">
+        <footer>
+            &copy; 2021 Peer Park &nbsp; <i class="fa fa-instagram"></i> &nbsp; <i class="fa fa-twitter"></i> &nbsp; <i class="fa fa-facebook-square"></i>
+        </footer>
+    </div>
 </body>
