--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="front">
         <div class="navbar">
             <nav>
-                <img src="logo.png" alt="logo">
+                <img src="images/logo.png" alt="logo">
                 <a href="index.html">Home</a>
                 <a href="product.html">Our Product</a>
                 <a href="price.html">Pricing</a>
