--- a/product.html
+++ b/product.html
@@ -8,6 +8,7 @@
     <div class="front">
         <div class="navbar">
             <nav>
+                <img src="images/logo.png" alt="logo">
                 <a href="index.html">Home</a>
                 <a href="product.html">Our Product</a>
                 <a href="price.html">Pricing</a>
