--- a/product.html
+++ b/product.html
@@ -3,6 +3,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Peer Park | Peer-to-Peer Parking Network</title>
 </head>
+
 <body>
     <!--Nav Bar section (with links to different pages)-->
     <div class="front">
@@ -16,4 +17,16 @@
             </nav>
         </div>
     </div>
+
+    <div class="header">
+        <h1>Our Product</h1>
+    </div>
+    
+    
+    <div class="app">
+        <h2>Our app</h2>
+    </div>
+
+
+
 </body>
