Updated the sites I forgot to fix

--- a/product.html
+++ b/product.html
@@ -2,12 +2,14 @@
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Peer Park | Peer-to-Peer Parking Network</title>
+    <script src="https://kit.fontawesome.com/04fe6a86d7.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!--Nav Bar section (with links to different pages)-->
     <div class="front">
         <div class="navbar">
             <nav>
+		<img class="logo-navbar"  src="images/logo.png" alt="logo">
                 <a href="index.html">Home</a>
                 <a href="product.html">Our Product</a>
                 <a href="price.html">Pricing</a>
@@ -15,4 +17,11 @@
             </nav>
         </div>
     </div>
+  <!--Footer-->
+    <div class="footer">
+        <footer>
+            &copy; 2021 Peer Park &nbsp; <i class="fa fa-instagram"></i> &nbsp; <i class="fa fa-twitter"></i> &nbsp; <i class="fa fa-facebook-square"></i>
+        </footer>
+    </div>
+
 </body>
