--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Peer Park | Peer-to-Peer Parking Network</title>
     <script src="https://kit.fontawesome.com/04fe6a86d7.js" crossorigin="anonymous"></script>
- 
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" href="images/favicon.ico">
 </head>
 
 <body>
