--- a/price.html
+++ b/price.html
@@ -2,7 +2,7 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Peer Park | Peer-to-Peer Parking Network</title>
+    <title>Pricing | Peer Park</title>
     <script src="https://kit.fontawesome.com/04fe6a86d7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" href="images/favicon.ico">
