--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <div class="front">
         <div class="navbar">
             <nav>
-                <img src="images/logo.png" alt="logo">
+                <img class="logo-navbar" src="images/logo.png" alt="logo">
                 <a href="index.html">Home</a>
                 <a href="product.html">Our Product</a>
                 <a href="price.html">Pricing</a>
