--- a/product.html
+++ b/product.html
@@ -21,21 +21,30 @@
         </div>
     </div>
 
+    <!--Our product-->
     <div class="header">
         <h1>Our Product</h1>
     </div>
     
-    <!--App/Website sec.-->
+    <!--App/Website section-->
     <div class="app">
         <h2>Our app</h2>
+        <p>The PeerPark app is a very user-friendly application that allows users to rent a parking spot very quickly. Whether your living in Toronto, Los Angeles or in Chicago, if you're in desperate need of a praking spot all it takes is a couple of minutes to get yourself a parking spot</p>
     </div>
 
-    <!--How to rent sec.-->
+    <!--How to rent section-->
     <div class="rent">
         <h2>Renting a Parking spot</h2>
+        <p>If your're in need of a parking spot all it takes is:</p>
+        <ul>
+        <li>Find the location where you want to park your vehicle</li>
+        <li>Find and select an ad/posting (you'll see more information about the parking spot once ad has been selected)</li>
+        <li>Insert all the relevant information (How long you'll be renting the parking spot, card number, etc.)</li>
+        <li>And that's it, you've now got yourself a parking spot and all it took were 3 steps!</li>
+        </ul>
     </div>
 
-    <!--Posting an ad sec.-->
+    <!--Posting an ad section-->
     <div class="ad">
         <h2>Posting an ad</h2>
     </div>
