--- a/product.html
+++ b/product.html
@@ -29,17 +29,17 @@
     <!--App/Website section-->
     <div class="app">
         <h2>Our app</h2>
-        <p>The PeerPark app is a very user-friendly application that allows users to rent a parking spot very quickly. Whether your living in Toronto, Los Angeles or in Chicago, if you're in desperate need of a praking spot all it takes is a couple of minutes to get yourself a parking spot</p>
+        <p>The PeerPark app is a free and very user-friendly application that allows users to rent a parking spot very quickly. Whether you're living in Toronto or Los Angeles, if you're in desperate need of a parking spot all it takes is a couple of minutes</p>
     </div>
 
     <!--How to rent section-->
     <div class="rent">
         <h2>Renting a Parking spot</h2>
-        <p>If your're in need of a parking spot all it takes is:</p>
+        <p>If you're in need of a parking spot all it takes is 3 very simple steps:</p>
         <ul>
-        <li>Find the location where you want to park your vehicle</li>
-        <li>Find and select an ad/posting (you'll see more information about the parking spot once ad has been selected)</li>
-        <li>Insert all the relevant information (How long you'll be renting the parking spot, card number, etc.)</li>
+        <li>First you nee to find the location where you want to park your vehicle</li>
+        <li>Then you need to find and select an ad/posting (you'll see more information about the parking spot once ad has been selected)</li>
+        <li>Finally, you'll need to add all the relevant information (How long you'll be renting the parking spot, card number, etc.)</li>
         <li>And that's it, you've now got yourself a parking spot and all it took were 3 steps!</li>
         </ul>
     </div>
@@ -47,6 +47,13 @@
     <!--Posting an ad section-->
     <div class="ad">
         <h2>Posting an ad</h2>
+        <d1>
+            <dt>If you've got an extra parking spot and are looking to make extra money then all you need to do is follow these 3 simple steps:</dt>
+            <dd>Download and create an account in our mobile app</dd>
+            <dd>Take a picture of the parking spot and then add any important information like the price, how long the parking spot will be available for rent, etc.</dd>
+            <dd>And the final step is to post your add and that's it you've offcially posted you first ad using the PeerPark app in just 3 steps</dd>
+        </d1>
+        
     </div>
 
   <!--Footer-->
