--- a/product.html
+++ b/product.html
@@ -39,8 +39,7 @@
         <ul>
         <li>First you nee to find the location where you want to park your vehicle</li>
         <li>Then you need to find and select an ad/posting (you'll see more information about the parking spot once ad has been selected)</li>
-        <li>Finally, you'll need to add all the relevant information (How long you'll be renting the parking spot, card number, etc.)</li>
-        <li>And that's it, you've now got yourself a parking spot and all it took were 3 steps!</li>
+        <li>Finally, you'll need to add all the relevant information (How long you'll be renting the parking spot, card number, etc.). And that's it, you've now got yourself a parking spot and all it took were 3 steps!</li>
         </ul>
     </div>
 
