Improved site banner and titles

--- a/product.html
+++ b/product.html
@@ -9,7 +9,7 @@
 
 <body>
     <!--Nav Bar section (with links to different pages)-->
-    <div class="front">
+    <div class="banner">
         <div class="navbar">
             <nav>
 		<img class="logo-navbar"  src="images/logo.png" alt="logo">
@@ -19,11 +19,10 @@
                 <a href="about.html">About Us</a>
             </nav>
         </div>
-    </div>
-
-    <!--Our product-->
-    <div class="header">
-        <h1>Our Product</h1>
+        <!--Our product-->
+    	<div class="banner-title">
+        	<h1>Our Product</h1>
+    	</div>
     </div>
     
     <!--App/Website section-->
