--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 <body>
     
     <!--Navagation section-->
-    <div class="front">
+    <div class="banner">
         <div class="navbar">
             <nav>
                 <img class="logo-navbar" src="images/logo.png" alt="logo">
@@ -20,6 +20,9 @@
                 <a href="price.html">Pricing</a>
                 <a href="about.html">About Us</a>
             </nav>
+            <div class="banner-title">
+        	<h1>About Us</h1>
+    	    </div>    
         </div>
     </div>
  <!--Footer-->
