--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
                 <a href="about.html">About Us</a>
             </nav>
             <div class="banner-title">
-        	<h1>About Us</h1>
+        	<h1>About Us!</h1>
     	    </div>    
         </div>
     </div>
