Worked on About page

--- a/about.html
+++ b/about.html
@@ -21,9 +21,35 @@
                 <a href="about.html">About Us</a>
             </nav>
             <div class="banner-title">
-        	<h1>About Us!</h1>
+        	<h1>About Us</h1>
     	    </div>    
         </div>
+    </div>
+    <div class="main">
+	<h3>Aydin Yalcinkaya</h3>
+	<h4>Developer</h4>
+	<h5>Lorem ipsum dolor description</h5>
+	<br />
+	
+	<h3>Joseph Champeau</h3>
+	<h4>Developer</h4>
+	<h5>Lorem ipsum dolor description</h5>
+	<br />
+	
+	<h3>Olivia Jia</h3>
+	<h4>Developer & Designer</h4>
+	<h5>Lorem ipsum dolor description</h5>
+	<br />
+	
+	<h3>Rendy Irianto</h3>
+	<h4>Developer</h4>
+	<h5>Lorem ipsum dolor description</h5>
+	<br />
+	
+	<h3>Rami Slimane-Kadi</h3>
+	<h4>Developer</h4>
+	<h5>Lorem ipsum dolor description</h5>
+	<br />	
     </div>
  <!--Footer-->
     <div class="footer">
