Changed and added new background

--- a/price.html
+++ b/price.html
@@ -11,7 +11,7 @@
 <body>
     
     <!--Navagation section-->
-    <div class="banner">
+    <div class="banner-price">
         <div class="navbar">
             <nav>
                 <img class="logo-navbar" src="images/logo.png" alt="logo">
