--- a/product.html
+++ b/product.html
@@ -9,7 +9,7 @@
 
 <body>
     <!--Nav Bar section (with links to different pages)-->
-    <div class="banner">
+    <div class="banner-product">
         <div class="navbar">
             <nav>
 		<img class="logo-navbar"  src="images/logo.png" alt="logo">
