--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 <body>
     
     <!--Navagation section-->
-    <div class="banner">
+    <div class="banner-about">
         <div class="navbar">
             <nav>
                 <img class="logo-navbar" src="images/logo.png" alt="logo">
@@ -28,32 +28,31 @@
     <div class="main">
 	<h3>Aydin Yalcinkaya</h3>
 	<h4>Developer</h4>
-	<h5>Lorem ipsum dolor description</h5>
+	<p>Lorem ipsum dolor description</p>
 	<br />
 	
 	<h3>Joseph Champeau</h3>
 	<h4>Developer</h4>
-	<h5>Lorem ipsum dolor description</h5>
+	<p>Lorem ipsum dolor description</p>
 	<br />
 	
 	<h3>Olivia Jia</h3>
 	<h4>Developer & Designer</h4>
-	<h5>Lorem ipsum dolor description</h5>
+	<p>Lorem ipsum dolor description</p>
 	<br />
 	
 	<h3>Rendy Irianto</h3>
 	<h4>Developer</h4>
-	<h5>Lorem ipsum dolor description</h5>
+	<p>Lorem ipsum dolor description</p>
 	<br />
 	
 	<h3>Rami Slimane-Kadi</h3>
 	<h4>Developer</h4>
-	<h5>Lorem ipsum dolor description</h5>
+	<p>Lorem ipsum dolor description</p>
 	<br />	
 
     <h3>About PeerPark</h3>
     <p>Over the last decade, we've noticed that the demand for parking spaces in populated cities has substantially increased. We wanted to find a way to make parking more affordable and accessible to people who are looking for a place to park without having the trouble of looking for spaces or paying expensive fees while in the city. We thought of an idea to rent out people’s driveways that are not in use, so that others may be able to use that space for parking their car. That way people can enjoy the benefit of accessible parking space, while others can find a way to make money.</p>
-	<h5>Lorem ipsum dolor description</h5>
 	<br />	
     
     <h3>FAQs:</h3>
