Add css to price page

--- a/price.html
+++ b/price.html
@@ -37,21 +37,24 @@
     <!--Service fee section-->
     <div class="servicefee">
         <h2>Service</h2>
-        <p id="serv-p">For using our application, we will collect a service fee of 5%. This fee is deducted off the price of the rent.</p>
+        <p id="serv-p">For using our application, we will collect a service fee of <strong>5%</strong>. This fee is deducted off the price of the rent.</p>
     </div>
     
     <!--Membership fee section-->
     <div class="membership">
         <h2>Membership</h2>
-        <div id="membership-p">
-            <p>Though using our application is free, we offer a membership service.</p>
+        <div class="memb-p" id="membership-p">
+            <p>Though using our application is free, we offer membership.</p>
+            </br>
             <ul>
                 <li>Price: 10 $/month</li>
+                </br>
                 <li>Description: With this membership, we won't deduct a service off the pay from the rent fee and a discount on any rent.</li>
             </ul>
         </div>
-    </div>    
- <!--Footer-->
+    </div> 
+
+    <!--Footer-->
     <div class="footer">
         <footer>
             &copy; 2021 Peer Park &nbsp; <i class="fa fa-instagram"></i> &nbsp; <i class="fa fa-twitter"></i> &nbsp; <i class="fa fa-facebook-square"></i>
