Added JS for main page button.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://kit.fontawesome.com/04fe6a86d7.js" crossorigin="anonymous"></script>
     <link rel="icon" href="images/favicon.ico">
+    <script src="main.js"></script>
 
     <title>Peer Park | Peer-to-Peer Parking Network</title>
 </head>
@@ -27,7 +28,8 @@
         <div class="header">
             <h1>Not sure where to park?</h1>
             <h2>No problem.</h2>
-            <a href="#" class="parking"><i class="fas fa-location-arrow"></i> Parking near you</a>
+            <a id="findParking" onclick="findParking()" class="parking"><i class="fas fa-location-arrow"></i> Parking near you</a>
+           
         </div>
     </div>
     
