--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
 	
 	<h3>Olivia Jia</h3>
 	<h4>Developer & Designer</h4>
-	<p></p>
+	<p>I am a software engineering student at the University of Ottawa. My main interest is anything in the artistic area. Examples of such is designing websites and drawing in general. I also very much enjoy learning and self-learning, since there's always something new to learn.</p>
 	<br />
 	
 	<h3>Rendy Irianto</h3>
