--- a/price.html
+++ b/price.html
@@ -31,7 +31,7 @@
     <!--Renting fee section-->
     <div class="rentfee">
         <h2>Rent</h2>
-        <p id="rent-p">The prices of the rent for parking are decided by the users that are uploading listing. Prices varies depending on the location, time and users discretion.</p>
+        <p id="rent-p" onclick="Rent()">The prices of the rent for parking are decided by the users that are uploading listing. Prices varies depending on the location, time and users discretion.</p>
     </div>
     
     <!--Service fee section-->
