Did some more prettying

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    
+
     <!--Navagation section-->
     <div class="banner-about">
         <div class="navbar">
@@ -21,48 +21,57 @@
                 <a href="index.html">Home</a>
             </nav>
             <div class="banner-title">
-        	<h1>About Us</h1>
-    	    </div>    
+                <h1>About Us</h1>
+            </div>
         </div>
     </div>
-    <div class="main">
-	<h3>Aydin Yalcinkaya</h3>
-	<h4>Developer</h4>
-	<p>Lorem ipsum dolor description</p>
-	<br />
-	
-	<h3>Joseph Champeau</h3>
-	<h4>Developer</h4>
-	<p>Lorem ipsum dolor description</p>
-	<br />
-	
-	<h3>Olivia Jia</h3>
-	<h4>Developer & Designer</h4>
-	<p></p>
-	<br />
-	
-	<h3>Rendy Irianto</h3>
-	<h4>Developer</h4>
-	<p>Lorem ipsum dolor description</p>
-	<br />
-	
-	<h3>Rami Slimane-Kadi</h3>
-	<h4>Developer</h4>
-	<p>Lorem ipsum dolor description</p>
-	<br />	
 
-    <h3>About PeerPark</h3>
-    <p>Over the last decade, we've noticed that the demand for parking spaces in populated cities has substantially increased. We wanted to find a way to make parking more affordable and accessible to people who are looking for a place to park without having the trouble of looking for spaces or paying expensive fees while in the city. We thought of an idea to rent out people’s driveways that are not in use, so that others may be able to use that space for parking their car. That way people can enjoy the benefit of accessible parking space, while others can find a way to make money.</p>
-	<br />	
-    
-    <h3>FAQs:</h3>
-	<h5>Lorem ipsum dolor description</h5>
-	<br />	
+    <div class="body" style="margin-top: 15vh">
+        <h3>Aydin Yalcinkaya</h3>
+        <h4>Developer</h4>
+        <p>Lorem ipsum dolor description</p>
+        <br />
+
+        <h3>Joseph Champeau</h3>
+        <h4>Developer</h4>
+        <p>Lorem ipsum dolor description</p>
+        <br />
+
+        <h3>Olivia Jia</h3>
+        <h4>Developer & Designer</h4>
+        <p></p>
+        <br />
+
+        <h3>Rendy Irianto</h3>
+        <h4>Developer</h4>
+        <p>Lorem ipsum dolor description</p>
+        <br />
+
+        <h3>Rami Slimane-Kadi</h3>
+        <h4>Developer</h4>
+        <p>Lorem ipsum dolor description</p>
+        <br />
+
+        <h3>About PeerPark</h3>
+        <p>Over the last decade, we've noticed that the demand for parking spaces in populated cities has substantially
+            increased. We wanted to find a way to make parking more affordable and accessible to people who are looking
+            for a place to park without having the trouble of looking for spaces or paying expensive fees while in the
+            city. We thought of an idea to rent out people’s driveways that are not in use, so that others may be able
+            to use that space for parking their car. That way people can enjoy the benefit of accessible parking space,
+            while others can find a way to make money.</p>
+        <br />
+
+        <h3>FAQs:</h3>
+        <h5>Lorem ipsum dolor description</h5>
+        <br />
     </div>
- <!--Footer-->
+    <!--Footer-->
+    <!--Footer-->
     <div class="footer">
         <footer>
-            &copy; 2021 Peer Park &nbsp; <i class="fa fa-instagram"></i> &nbsp; <i class="fa fa-twitter"></i> &nbsp; <i class="fa fa-facebook-square"></i>
+            &copy; 2021 Peer Park &nbsp; <a href="https://instagr.am"><i class="fa fa-instagram"></i></a> &nbsp; <a
+                href="https://twitter.com"><i class="fa fa-twitter"></i></a> &nbsp; <a href="https://facebook.com"><i
+                    class="fa fa-facebook-square"></i></a>
         </footer>
     </div>
-</body>    
+</body>
