--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
      <!--Footer-->
     <div class="footer">
         <footer>
-            &copy; 2021 Peer Park &nbsp; <i class="fa fa-instagram"></i> &nbsp; <i class="fa fa-twitter"></i> &nbsp; <i class="fa fa-facebook-square"></i>
+            &copy; 2021 Peer Park &nbsp; <a href="https://instagr.am"><i class="fa fa-instagram"></i></a> &nbsp; <a href="https://twitter.com"><i class="fa fa-twitter"></i></a> &nbsp; <a href="https://facebook.com"><i class="fa fa-facebook-square"></i></a>
         </footer>
     </div>
 </body>
