--- a/product.html
+++ b/product.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Our Product | Peer Park</title>
@@ -12,52 +13,64 @@
     <div class="banner-product">
         <div class="navbar">
             <nav>
-		<img class="logo-navbar"  src="images/logo.png" alt="logo">
-        <a href="about.html">About Us</a>
-        <a href="price.html">Pricing</a>
-        <a href="product.html">Our Product</a>
-        <a href="index.html">Home</a>
+                <img class="logo-navbar" src="images/logo.png" alt="logo">
+                <a href="about.html">About Us</a>
+                <a href="price.html">Pricing</a>
+                <a href="product.html">Our Product</a>
+                <a href="index.html">Home</a>
             </nav>
         </div>
         <!--Our product-->
-    	<div class="banner-title">
-        	<h1>Our Product</h1>
-    	</div>
+        <div class="banner-title">
+            <h1>Our Product</h1>
+        </div>
     </div>
-    
-    <!--App/Website section-->
-    <div class="app">
-        <h2>Our app</h2>
-        <p>The PeerPark app is a free and very user-friendly application that allows users to rent a parking spot very quickly. Whether you're living in Toronto or Los Angeles, if you're in desperate need of a parking spot all it takes is a couple of minutes</p>
+    <div class="body">
+        <!--App/Website section-->
+        <div class="app">
+            <h2>Our app</h2>
+            <p>The PeerPark app is a free and very user-friendly application that allows users to rent a parking spot
+                very quickly. Whether you're living in Toronto or Los Angeles, if you're in desperate need of a parking
+                spot all it takes is a couple of minutes</p>
+        </div>
+
+        <!--How to rent section-->
+        <div class="rent">
+            <h2>Renting a Parking spot</h2>
+            <p>If you're in need of a parking spot all it takes is 3 very simple steps:</p>
+            <ol>
+                <li>Find the location where you want to park your vehicle</li>
+                <li>Find and select an ad/posting (you'll see more information about the parking spot
+                    once ad has been selected)</li>
+                <li>Add all the relevant information (How long you'll be renting the parking
+                    spot, card number, etc.)</li>
+            </ol>
+            <p>And that's it, you've now got yourself a parking spot and all it took were
+                3 steps!</p>
+        </div>
+
+        <!--Posting an ad section-->
+        <div class="ad">
+            <h2>Posting an ad</h2>
+            <d1>
+                <dt>If you've got an extra parking spot and are looking to make extra money then all you need to do is
+                    follow these 3 simple steps:</dt>
+                <ol>
+                    <li>Download and create an account in our mobile app</li>
+                    <li>Take a picture of the parking spot and then add any important information like the price, how
+                        long the parking spot will be available for rent, etc.</li>
+                    <li>And the final step is to post your add and that's it you've offcially posted you first ad using
+                        the PeerPark app in just 3 steps</li>
+                </ol>
+            </d1>
+
+        </div>
     </div>
 
-    <!--How to rent section-->
-    <div class="rent">
-        <h2>Renting a Parking spot</h2>
-        <p>If you're in need of a parking spot all it takes is 3 very simple steps:</p>
-        <ul>
-        <li>First you nee to find the location where you want to park your vehicle</li>
-        <li>Then you need to find and select an ad/posting (you'll see more information about the parking spot once ad has been selected)</li>
-        <li>Finally, you'll need to add all the relevant information (How long you'll be renting the parking spot, card number, etc.). And that's it, you've now got yourself a parking spot and all it took were 3 steps!</li>
-        </ul>
-    </div>
-
-    <!--Posting an ad section-->
-    <div class="ad">
-        <h2>Posting an ad</h2>
-        <d1>
-            <dt>If you've got an extra parking spot and are looking to make extra money then all you need to do is follow these 3 simple steps:</dt>
-            <dd>Download and create an account in our mobile app</dd>
-            <dd>Take a picture of the parking spot and then add any important information like the price, how long the parking spot will be available for rent, etc.</dd>
-            <dd>And the final step is to post your add and that's it you've offcially posted you first ad using the PeerPark app in just 3 steps</dd>
-        </d1>
-        
-    </div>
-
-  <!--Footer-->
-    <div class="footer">
+     <!--Footer-->
+     <div class="footer">
         <footer>
-            &copy; 2021 Peer Park &nbsp; <i class="fa fa-instagram"></i> &nbsp; <i class="fa fa-twitter"></i> &nbsp; <i class="fa fa-facebook-square"></i>
+            &copy; 2021 Peer Park &nbsp; <a href="https://instagr.am"><i class="fa fa-instagram"></i></a> &nbsp; <a href="https://twitter.com"><i class="fa fa-twitter"></i></a> &nbsp; <a href="https://facebook.com"><i class="fa fa-facebook-square"></i></a>
         </footer>
-	</div>
+    </div>
 </body>
