Did some more prettying

--- a/about.html
+++ b/about.html
@@ -25,10 +25,10 @@
             </div>
         </div>
     </div>
-    <div class="body" style="margin-top: 15vh">
+    <div class="body" style="margin-top: 5vh">
         <h3>Aydin Yalcinkaya</h3>
         <h4>Developer</h4>
-        <p>Lorem ipsum dolor description</p>
+        <p>I am a first year Computer Science student at the University of Ottawa. I am interested in making projects that help others. I also enjoy working out and playing sports with my friends.</p>
         <br />
 
         <h3>Joseph Champeau</h3>
@@ -60,10 +60,6 @@
             city. We thought of an idea to rent out people’s driveways that are not in use, so that others may be able
             to use that space for parking their car. That way people can enjoy the benefit of accessible parking space,
             while others can find a way to make money.</p>
-        <br />
-
-        <h3>FAQs:</h3>
-        <h5>Lorem ipsum dolor description</h5>
         <br />
     </div>
     <!--Footer-->
