Fixed overlapping issue with footer.

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
             </div>
         </div>
     </div>
-    <div class="body" style="margin-top: 5vh">
+    <div class="body" style="margin-top: 5vh; margin-bottom: 5vh">
         <h3>Aydin Yalcinkaya</h3>
         <h4>Developer</h4>
         <p>I am a first year Computer Science student at the University of Ottawa. I am interested in making projects that help others. I also enjoy working out and playing sports with my friends.</p>
