Minor improvements to the Product page.

--- a/product.html
+++ b/product.html
@@ -28,7 +28,8 @@
     <div class="body">
         <!--App/Website section-->
         <div class="app">
-            <h2>Our app</h2>
+            <br>
+            <h3>Our App</h3>
             <p>The PeerPark app is a free and very user-friendly application that allows users to rent a parking spot
                 very quickly. Whether you're living in Toronto or Los Angeles, if you're in desperate need of a parking
                 spot all it takes is a couple of minutes</p>
@@ -36,7 +37,8 @@
 
         <!--How to rent section-->
         <div class="rent">
-            <h2>Renting a Parking spot</h2>
+            <br>
+            <h3>Renting a Parking Spot</h3>
             <p>If you're in need of a parking spot all it takes is 3 very simple steps:</p>
             <ol>
                 <li>Find the location where you want to park your vehicle</li>
@@ -51,7 +53,8 @@
 
         <!--Posting an ad section-->
         <div class="ad">
-            <h2>Posting an ad</h2>
+            <br>
+            <h3>Posting an Ad</h3>
             <d1>
                 <dt>If you've got an extra parking spot and are looking to make extra money then all you need to do is
                     follow these 3 simple steps:</dt>
