--- a/product.html
+++ b/product.html
@@ -31,8 +31,8 @@
             <br>
             <h3>Our App</h3>
             <p>The PeerPark app is a free and very user-friendly application that allows users to rent a parking spot
-                very quickly. Whether you're living in Toronto or Los Angeles, if you're in desperate need of a parking
-                spot all it takes is a couple of minutes</p>
+                very quickly. Whether you're living in Toronto or Los Angeles, and you're in desperate need of a parking
+                spot all it takes is a couple of minutes to find one!</p>
         </div>
 
         <!--How to rent section-->
