--- a/price.html
+++ b/price.html
@@ -29,8 +29,8 @@
     
     <!--Renting fee section-->
     <div class="rentfee">
-        <h2>Rent</h2>
-        <p id="rent-p" onclick="Rent()">The prices of the rent for parking are decided by the users that are uploading listing. Prices varies depending on the location, time and users discretion.</p>
+        <h2 id="rent-h">Rent</h2>
+        <p class="rent-p" id="rent-p">The prices of the rent for parking are decided by the users that are uploading listing. Prices varies depending on the location, time and users discretion.</p>
     </div>
     
     <!--Service fee section-->
