--- a/product.html
+++ b/product.html
@@ -5,6 +5,7 @@
     <title>Our Product | Peer Park</title>
     <script src="https://kit.fontawesome.com/04fe6a86d7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="product.css">
     <link rel="icon" href="images/favicon.ico">
 </head>
 
