--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
 
         <h3>Rami Slimane-Kadi</h3>
         <h4>Developer</h4>
-        <p>Lorem ipsum dolor description</p>
+        <p>I am a Computer Science student at the University of Ottawa. I am interested in many different activities such as playing sports, reading and video games. Another interest I have is applying the knowledge I acquired in programming and software development in order to help others. </p>
         <br />
 
         <h3>About PeerPark</h3>
