work on the about us page

--- a/about.html
+++ b/about.html
@@ -60,13 +60,12 @@
         <div class="right">
             <h3>Rami Slimane-Kadi</h3>
             <h4>Developer</h4>
-            <p>Lorem ipsum dolor description</p>
+            <p>I am a Computer Science student at the University of Ottawa. I am interested in many different activities such as playing sports, reading and video games. Another interest I have is applying the knowledge I acquired in programming and software development in order to help others. </p>
             <br />     
         </div>
         
 
         <h2>About PeerPark</h2>
-        
         <p>Over the last decade, we've noticed that the demand for parking spaces in populated cities has substantially
             increased. We wanted to find a way to make parking more affordable and accessible to people who are looking
             for a place to park without having the trouble of looking for spaces or paying expensive fees while in the
