added to our app section

--- a/product.html
+++ b/product.html
@@ -33,7 +33,7 @@
             <h3>Our App</h3>
             <p>The PeerPark app is a free and very user-friendly application that allows users to rent a parking spot
                 very quickly. Whether you're living in Toronto or Los Angeles, and you're in desperate need of a parking
-                spot all it takes is a couple of minutes to find one!</p>
+                spot all it takes is a couple of minutes to find one! While the app itself is completely free, there are fees for renting a parking spot/posting an ad. In addition, we offer memberships that come with certain fees (check pricing section).</p>
         </div>
 
         <!--How to rent section-->
