--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
         </div>
         
 
-        <div class="left>
+        <div class="left">
             <h3>Joseph Champeau</h3>
             <h4>Developer</h4>
             <p>I am a second year Computer Science student at the University of Ottawa. I am interested in the interesection of problem solving questions and computer programming. I also enjoy playing tennis and various other sports with friends and family. </p>
