Fixed broken image

--- a/map.html
+++ b/map.html
@@ -13,10 +13,11 @@
 <body>
 
     <!--Navagation section-->
-    <div class="banner-about">
+    <div class="banner-demo">
         <div class="navbar">
             <nav>
                 <img class="logo-navbar" src="images/logo.png" alt="logo">
+                <a href="map.html">About Us</a>
                 <a href="about.html">About Us</a>
                 <a href="price.html">Pricing</a>
                 <a href="product.html">Our Product</a>
@@ -24,12 +25,12 @@
             </nav>
         </div>
         <div class="banner-title">
-            <h1>About Us</h1>
+            <h1>App Demo</h1>
         </div>
     </div>
 
   <div>
-    <img src="MapExample.png" alt="example image of the mapview and driveway prices">
+    <img src="images/MapExample.png" alt="example image of the mapview and driveway prices">
   </div>
   
 </body>
