--- a/map.html
+++ b/map.html
@@ -13,7 +13,7 @@
 <body>
 
     <!--Navagation section-->
-    <div class="banner-demo">
+    <div class="banner-demog">
         <div class="navbar">
             <nav>
                 <img class="logo-navbar" src="images/logo.png" alt="logo">
