Fixed demo page

--- a/map.html
+++ b/map.html
@@ -5,15 +5,13 @@
     <title>About Us | Peer Park</title>
     <script src="https://kit.fontawesome.com/04fe6a86d7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
-
-    <link rel="stylesheet" type="text/css" href="about.css">
     <link rel="icon" href="images/favicon.ico">
 </head>
 
 <body>
 
     <!--Navagation section-->
-    <div class="banner-demog">
+    <div class="banner-demo">
         <div class="navbar">
             <nav>
                 <img class="logo-navbar" src="images/logo.png" alt="logo">
