modified css in product

--- a/product.html
+++ b/product.html
@@ -42,6 +42,7 @@
             <br>
             <h3 id="rent-h">Renting a Parking Spot</h3>
             <p><em>If you're in need of a parking spot all it takes is 3 very simple steps:</em></p>
+            </br>
             <ol>
                 <li>Find the location where you want to park your vehicle</li>
                 <li>Find and select an ad/posting (you'll see more information about the parking spot
@@ -49,7 +50,8 @@
                 <li>Add all the relevant information (How long you'll be renting the parking
                     spot, card number, etc.)</li>
             </ol>
-            <p>And that's it, you've now got yourself a parking spot and all it took were
+            </br>
+            <p class="p-rent">And that's it, you've now got yourself a parking spot and all it took were
                 3 steps!</p>
         </div>
 
@@ -60,6 +62,7 @@
             <d1>
                 <dt><em>If you've got an extra parking spot and are looking to make extra money then all you need to do is
                     follow these 3 simple steps:</em></dt>
+                </br>
                 <ol>
                     <li>Download and create an account in our mobile app</li>
                     <li>Take a picture of the parking spot and then add any important information like the price, how
