--- a/index.html
+++ b/index.html
@@ -17,11 +17,7 @@
         <div class="navbar">
             <nav>
                 <img class="logo-navbar"  src="images/logo.png" alt="logo">
-                <a href="map.html">Demo</a>
-                <a href="about.html">About Us</a>
-                <a href="price.html">Pricing</a>
-                <a href="product.html">Our Product</a>
-                <a href="index.html">Home</a>
+                <a href="/about.html">Learn More</a>
             </nav>
         </div>
         
