--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="navbar">
             <nav>
                 <img class="logo-navbar"  src="images/logo.png" alt="logo">
-                <a href="/about.html">Learn More</a>
+                <a href="about.html">Learn More</a>
             </nav>
         </div>
         
