--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
         
         <h3>Rendy Irianto</h3>
         <h4>Developer</h4>
-        <p>Lorem ipsum dolor description</p>
+        <p>I am a first year software engineering student at the University of Ottawa. My main interest include reading, running, and video games. I also enjoying programming and learning new ways to code.</p>
         <br />
 
         <div class="right">
